# ShulkerBoxPreview

./: .gitignore  CMakeLists.txt  README.md
src/: appendhook.h  itemstackbase.h  main.cpp  main.h  renderhoverboxhook.h  shulkerboxblockitemappendhook.h  weaponitemappendhook.h
src/hooks/: renderhoverboxhook.h  shulkerboxblockitemappendhook.h
src/item/: item.h  itemstackbase.cpp  itemstackbase.h
src/nbt/: compoundtag.cpp  compoundtag.h  listtag.cpp  listtag.h
src/shulkerenderer/: colors.h  shulkerrenderer.cpp  shulkerrenderer.h
src/ui/: fakenineslice.cpp  fakenineslice.h  hashedstring.h  minecraftuirendercontext.h  nineslicehelper.cpp  nineslicehelper.h  resourcelocation.h
src/util/: scache.cpp  scache.h  xhelper.h
